# gnef

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  kmpkg-configuration.json  kmpkg.json  setup.py
cmake/: gnef_config.cmake.in  gnef_deps.cmake
dict/: .gitignore  dw.sh
dict/cantonese/: user_dict.txt
examples/: foo_ex.cc
gnef/: CMakeLists.txt  foo.cc  gnef_extension.cc  gnef_extension.h  main.cc  nor.cc  shell.cc
gnef/api/: api.h  config.cc  config.h  dict.cc  dict.h  double_string.h  initializer.cc  initializer.h  nlp.cc  nlp.h  normalize.cc  normalize.h  operator.h  segment.cc  segment.h
gnef/instance/: complex_convert.cc  complex_convert.h  detector.cc  detector.h  double_instance.h  embedding.cc  embedding.h  fasttext.cc  fasttext.h  hadar.cc  hadar.h  ner.cc  ner.h  pinyin.cc  pinyin.h  pinyin_convert.cc  pinyin_convert.h  segmenter.cc  segmenter.h
gnef/normalize/: detect_language.cc  detect_language.h  normalize.cc  normalize.h
gnef/operators/: fasttext.cc  fasttext.h  hadar.cc  hadar.h  jieba.cc  jieba.h  null_ner.cc  null_ner.h  xpinyin.cc  xpinyin.h
gnef/proto/: README.md  config.proto  embdding.pb.cc  embdding.pb.h  embdding.proto  embedding.proto  intent.pb.cc  intent.pb.h  intent.proto  ner.pb.cc  ner.pb.h  ner.proto  ngram.pb.cc  ngram.pb.h  ngram.proto  normalize.pb.cc  normalize.pb.h  normalize.proto  rewrite.pb.cc  rewrite.pb.h  rewrite.proto  search.pb.cc  search.pb.h  search.proto  segment.pb.cc  segment.pb.h  segment.proto  semantic.pb.cc  semantic.pb.h  semantic.proto
gnef/sql/: initializer.cc  initializer.h  registry.cc  registry.h
gnef/sql/config/: detect.cc  detect.h  nlp.cc  nlp.h  normalize.cc  normalize.h  registry.cc  registry.h
gnef/sql/dict/: registry.cc  registry.h
gnef/sql/nlp/: process.cc  process.h  registry.cc  registry.h
gnef/sql/normalize/: detect_language.cc  detect_language.h  hadar.cc  hadar.h  normalize.cc  normalize.h  pinyin.cc  pinyin.h  registry.cc  registry.h
gnef/sql/segment/: registry.cc  registry.h  segmenter.cc  segmenter.h
tests/: foo_doctest.cc  foo_test.cc
